syntax = "proto3";

package raft.v1;

option go_package = "github.com/shrtyk/raft-core/internal/proto/gen;raftpb";

service RaftService {
  rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
}

message LogEntry {
  int64 Term = 1;
  bytes Cmd = 2;
}

message RaftPersistentState {
  int64 CurrentTerm = 1;
  int64 VotedFor = 2;
  repeated LogEntry Log = 3;
  int64 LastIncludedIndex = 4;
  int64 LastIncludedTerm = 5;
}

message InstallSnapshotRequest {
  int64 Term = 1;
  int64 LeaderId = 2;
  int64 LastIncludedIndex = 3;
  int64 LastIncludedTerm = 4;
  bytes Data = 5;
}

message InstallSnapshotResponse { int64 Term = 1; }

message RequestVoteRequest {
  int64 Term = 1;
  int64 CandidateId = 2;
  int64 LastLogIndex = 3;
  int64 LastLogTerm = 4;
}

message RequestVoteResponse {
  int64 Term = 1;
  int64 VoterId = 2;
  bool VoteGranted = 3;
}

message AppendEntriesRequest {
  int64 Term = 1;
  int64 LeaderId = 2;
  int64 PrevLogTerm = 3;
  int64 PrevLogIndex = 4;
  int64 LeaderCommitIndex = 5;
  repeated LogEntry Entries = 6;
}

message AppendEntriesResponse {
  int64 Term = 1;
  bool Success = 2;
  int64 ConflictIndex = 3;
  int64 ConflictTerm = 4;
}
